Fixed behavior on small screens

--- a/src/pages/TopNavbar.scss
+++ b/src/pages/TopNavbar.scss
@@ -22,6 +22,7 @@
 
 .links {
   * {
+    display: inline-block;
     margin: 0.5rem;
     margin-left: 1rem;
     text-decoration: none;
@@ -30,13 +31,14 @@
 }
 
 @media screen and (max-width: 634px) {
+  .navbar {
+    display: block;
+  }
+
   .links {
     * {
       display: block;
-      margin-bottom: 1rem;
-      text-decoration: none;
-      white-space: nowrap;
-      color: colors.$texts;
+      margin-left: 0;
     }
   }
 }
